ci(pages): use relative VITE_BASE ('./') so dist/index.html uses ./assets/

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Build
       run: npm run build
       env:
-        VITE_BASE: /${{ github.event.repository.name }}/
+        VITE_BASE: './'
         VITE_API_BASE_URL: https://api.yourdomain.com
     - name: Verify built assets
       run: |
