--- a/.env
+++ b/.env
@@ -1,2 +1,11 @@
+# API Configuration - Point this to your Discord bot backend
 VITE_API_BASE_URL=http://localhost:3000
+
+# WebSocket Configuration (optional, defaults to API_BASE_URL)
+VITE_WS_URL=ws://localhost:3000
+
+# Base path for local development
 VITE_BASE=/
+
+# Environment
+VITE_ENV=development
