--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
+# API Configuration
 VITE_API_BASE_URL=https://api.yourdomain.com
+
+# WebSocket Configuration (optional, defaults to API_BASE_URL)
+VITE_WS_URL=wss://api.yourdomain.com
+
+# Base path for GitHub Pages deployment
 VITE_BASE=/SkatesGamehosting/
+
+# Environment (development, production)
+VITE_ENV=production
